k8s-manifest/php-service-production.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app-service
  namespace: production
spec:
  selector:
    app: php-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
