k8s-manifest/ingress-controller-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /production/?(.*)
        pathType: Prefix
        backend:
          service:
            name: php-app-service
            port:
              number: 80
